fixed links to jQueary and z-indexing

--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,7 @@ button:active {
 }
 
 .contact_modal_container {
+	z-index: 110;
 	display: none;
 }
 
